<resources>
    <string name="app_name">Cevicheria App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Incio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="explosionnorte_a_app">ExplosionNorteña App</string>
    <string name="logeate_aqui">Inicia Sesión</string>
    <string name="full_name">Nombre Completo</string>
    <string name="usuario">Usuario</string>
    <string name="usa_contra">Contraseña de Usuario</string>
    <string name="title_activity_bienvenio">BienvenioActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombres">Nombre Completo</string>
    <string name="apellido_completo">Apellido Completo</string>
    <string name="foto_perfil">Foto de Perfil</string>
    <string name="dni">DNI</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="genero">Genero</string>
    <string name="numero_de_celular">Numero de Celular</string>
    <string name="reservar">Reservar</string>
    <string name="mi_canasta">Canasta</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_reservas">Mis Reservas</string>
    <string name="mis_compras">Mis Compras</string>
    <string name="mi_pefil_usu">Mi Pefil</string>
    <string name="editar">Editar</string>
</resources>