<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilUsarioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="412dp"
            android:layout_height="279dp"
            android:src="@drawable/perfilusuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/usaurioimagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/baloo"
            android:text="@string/usuario"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/correo_electronico"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/txtNombres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/ColorLetraAzul"
            android:textSize="20dp"
            android:hint="@string/nombres"
            android:textColorHint="@color/ColorLetraAzul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/txtApellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColorLetraAzul"
            android:layout_marginTop="25dp"
            android:textSize="20dp"

            android:hint="@string/apellido_completo"
            android:textColorHint="@color/ColorLetraAzul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombres"
            app:layout_constraintWidth_percent=".8" />


        <TextView
            android:id="@+id/txtDNI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColorLetraAzul"
            android:hint="@string/dni"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textColorHint="@color/ColorLetraAzul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApellidos"
            app:layout_constraintWidth_percent=".8" />


        <TextView
            android:id="@+id/numCelular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColorLetraAzul"
            android:hint="@string/numero_de_celular"
            android:textColorHint="@color/ColorLetraAzul"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDNI"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColorLetraAzul"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:hint="@string/genero"
            android:textColorHint="@color/ColorLetraAzul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numCelular"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/txtClieUsuaId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColorLetraAzul"
            android:textColorHint="@color/ColorLetraAzul"
            android:drawablePadding="20dp"
            android:visibility="gone"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8" />

        <Button
            android:id="@+id/btnEditarPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_design"
            android:padding="14dp"
            android:text="@string/editar"
            android:textStyle="bold"
            android:onClick="irEditar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928"
            app:layout_constraintWidth_percent=".8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>