<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ingresaadtos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="REGISTRATE"
        android:textColor="@color/black"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuarioR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsuarioR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/usuario"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtContrasenaR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtContrasenaR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:layout_marginBottom="20dp"
        android:hint="@string/usa_contra"
        android:inputType="textPassword"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtNombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:drawablePadding="13dp"
        android:hint="@string/apellido_completo"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/imgImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/imgImagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:drawablePadding="13dp"
        android:hint="@string/foto_perfil"
        android:textColorHint="@color/ColorLetraAzul"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toTopOf="@+id/txtDNI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/nombres"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtDNI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/dni"
        android:textColorHint="@color/ColorLetraAzul"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/ColorLetraAzul"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/numCelular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/numCelular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/numero_de_celular"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/txtGenero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/txtGenero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/ColorLetraAzul"
        android:hint="@string/genero"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/txtClieUsuaId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/ColorLetraAzul"
        android:textColorHint="@color/ColorLetraAzul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:onClick="registrarUsuarioCliente"
        android:padding="14dp"
        android:text="Registrarse"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/txtLogeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:text="Ya estas Registrado?"
        android:textAlignment="center"
        android:textColor="#232424"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="16dp"
        android:onClick="login"
        android:text="Logueate Aquí"
        android:textAlignment="center"
        android:textColor="@color/ColorLetraAzul"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>